tests/rosetta/out/Smalltalk/check-that-file-exists.out
/tmp/check-that-file-exists.st:15: parse error, expected ']'
