tests/rosetta/out/Smalltalk/check-that-file-exists.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| printStat main fs p |
printStat := [:fs :path | ((fs includes: path)) ifTrue: [
(fs at: path) ifTrue: [
Transcript show: ((path + (' is a directory'))) printString; cr.
] ifFalse: [
Transcript show: ((path + (' is a file'))) printString; cr.
].
] ifFalse: [
Transcript show: ((((('stat ') + path)) + (': no such file or directory'))) printString; cr.
]. ].
main := [ fs := Dictionary from:{}.
fs at: 'docs' put: true.
{'input.txt'. '/input.txt'. 'docs'. '/docs'} do: [:p |.
printStat value: fs value: p.
].
. ].
main value.
